import configureMockStore from 'redux-mock-store';
import thunk from 'redux-thunk';

import * as actions from './actions';
import {initialState} from './reducer';

const middlewares = [thunk];
const mockStore = configureMockStore(middlewares);

const mockSpark = {
  internal: {
    presence: {
      list: jest.fn(() => Promise.resolve()),
      setStatus: jest.fn(() => Promise.resolve()),
      subscribe: jest.fn(() => Promise.resolve()),
      unsubscribe: jest.fn(() => Promise.resolve())
    },
    mercury: {
      on: jest.fn(),
      off: jest.fn()
    }
  }
};

const statusList = [
  {
    url: 'https://apheleia-a.wbx2.com/apheleia/api/v1?userId=THE-USER-ID',
    subject: 'abc-123',
    status: 'active',
    statusTime: '2017-06-02T19:38:16.029Z',
    lastActive: '2017-06-02T19:43:25.490Z',
    expiresTTL: 357,
    vectorCounters: {},
    suppressNotifications: false,
    lastSeenDeviceUrl: 'https://wdm-a.wbx2.com/wdm/api/v1/devices/THE-DEVICE-ID',
    expires: '2017-06-02T19:53:25.490Z',
    expiresTime: '2017-06-02T19:53:25.490Z'
  }
];


describe('redux-module-presence actions', () => {
  it('has exported actions', () => {
    expect(actions.setUserPresenceStatus).toBeDefined();
    expect(actions.getCurrentPresenceStatus).toBeDefined();
    expect(actions.subscribeToPresenceUpdates).toBeDefined();
    expect(actions.unsubscribeFromPresenceUpdates).toBeDefined();
  });

  it('can set user status', () => {
    const store = mockStore({});

    return store.dispatch(actions.setUserPresenceStatus('dnd', 60, mockSpark))
      .then(() => {
        expect(store.getActions()).toMatchSnapshot();
      });
  });

  it('can get user status', () => {
    const store = mockStore({});

    mockSpark.internal.presence.list = jest.fn(() => Promise.resolve({statusList}));

    return store.dispatch(actions.getCurrentPresenceStatus(['abc-123'], mockSpark))
      .then(() => {
        expect(store.getActions()).toMatchSnapshot();
      });
  });

  describe('#subscribeToPresenceUpdates()', () => {
    it('can subscribe to updates', () => {
      const mockState = {presence: initialState};
      const store = mockStore(mockState);

      mockSpark.internal.presence.subscribe = jest.fn(() => Promise.resolve({responses: statusList}));

      return store.dispatch(actions.subscribeToPresenceUpdates(['abc-123'], mockSpark))
        .then(() => {
          expect(store.getActions()).toMatchSnapshot();
        });
    });

    it('does not subscribe to items already subscribed', () => {
      const userId = 'abc-123';
      const mockState = {presence: initialState};

      mockState.presence = mockState.presence.setIn(['items', userId], {mocked: true});
      const store = mockStore(mockState);

      return store.dispatch(actions.subscribeToPresenceUpdates([userId], mockSpark))
        .then(() => {
          expect(store.getActions()).toMatchSnapshot();
        });
    });
  });


  it('can unsubscribe from updates', () => {
    const userId = 'abc-123';
    const mockState = {presence: initialState};

    mockState.presence = mockState.presence.setIn(['items', userId], {mocked: true});
    const store = mockStore(mockState);

    return store.dispatch(actions.unsubscribeFromPresenceUpdates(['abc-123'], mockSpark))
      .then(() => {
        expect(store.getActions()).toMatchSnapshot();
      });
  });
});
