// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux-module-presence actions #subscribeToPresenceUpdates() can subscribe to updates 1`] = `
Array [
  Object {
    "payload": Object {
      "status": Object {
        "abc-123": false,
      },
    },
    "type": "presence/SET_PRESENCE_STATUS",
  },
  Object {
    "payload": Object {
      "status": Object {
        "abc-123": "active",
      },
    },
    "type": "presence/SET_PRESENCE_STATUS",
  },
]
`;

exports[`redux-module-presence actions #subscribeToPresenceUpdates() does not subscribe to items already subscribed 1`] = `Array []`;

exports[`redux-module-presence actions can get user status 1`] = `
Array [
  Object {
    "payload": Object {
      "status": Array [
        Object {
          "expires": "2017-06-02T19:53:25.490Z",
          "expiresTTL": 357,
          "expiresTime": "2017-06-02T19:53:25.490Z",
          "lastActive": "2017-06-02T19:43:25.490Z",
          "lastSeenDeviceUrl": "https://wdm-a.wbx2.com/wdm/api/v1/devices/THE-DEVICE-ID",
          "status": "active",
          "statusTime": "2017-06-02T19:38:16.029Z",
          "subject": "abc-123",
          "suppressNotifications": false,
          "url": "https://apheleia-a.wbx2.com/apheleia/api/v1?userId=THE-USER-ID",
          "vectorCounters": Object {},
        },
      ],
    },
    "type": "presence/SET_PRESENCE_STATUS",
  },
]
`;

exports[`redux-module-presence actions can set user status 1`] = `
Array [
  Object {
    "payload": Object {
      "status": Object {
        "isSettingUserStatus": true,
      },
    },
    "type": "presence/UPDATE_MODULE_STATUS",
  },
  Object {
    "payload": Object {
      "status": Object {
        "isSettingUserStatus": false,
      },
    },
    "type": "presence/UPDATE_MODULE_STATUS",
  },
]
`;

exports[`redux-module-presence actions can unsubscribe from updates 1`] = `
Array [
  Object {
    "payload": Object {
      "status": Object {
        "abc-123": undefined,
      },
    },
    "type": "presence/SET_PRESENCE_STATUS",
  },
]
`;
